# mindmeld

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_server.sh
mindmeld/: __init__.py  cli.py  dictionary.py  engine.py  models.py  players.py  web.py  web_page.py  wsutil.py
mindmeld_game.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_logic.py
tools/: demo-shell.nix  record_demo.py
