[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "mindmeld-game"
version = "1.0.0"
description = "Mind Meld — a word-convergence game with human and Copilot SDK AI players (terminal + web)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ian Norris" }]
keywords = ["game", "word-game", "copilot", "ai", "convergence"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Topic :: Games/Entertainment",
]
dependencies = [
    # The GitHub Copilot CLI Python SDK (imported as `copilot`). Powers AI players.
    "github-copilot-sdk>=0.3",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Repository = "https://github.com/IanNorris/mindmeld"

[project.scripts]
mindmeld = "mindmeld.cli:cli"
mindmeld-web = "mindmeld.web:serve"

[tool.setuptools]
packages = ["mindmeld"]
